--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "fbjs": "^3.0.0",
     "react": "17.0.1",
     "react-native": "0.64.1",
-    "react-native-camera": "^3.43.9"
+    "react-native-camera": "^3.43.9",
+    "react-native-image-picker": "^2.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
